kgtkr/mastodon/sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: sidekiq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sidekiq
    spec:
      tolerations:
        - key: "kubernetes.kgtkr.net/unreliable"
          effect: "NoSchedule"
      containers:
        - image: ghcr.io/kgtkr/mastodon
          name: sidekiq
          resources:
            requests:
              cpu: "200m"
              memory: "500Mi"
            limits:
              cpu: "1000m"
              memory: "2000Mi"
          args:
            - bundle
            - exec
            - sidekiq
      restartPolicy: Always
