kgtkr/mastodon/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - port: 9000
      name: s3
    - port: 9001
      name: console
  selector:
    app.kubernetes.io/name: minio
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  serviceName: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
    spec:
      containers:
        - image: quay.io/minio/minio:RELEASE.2021-12-29T06-49-06Z
          name: minio
          resources:
            requests:
              cpu: "10m"
              memory: "30Mi"
          volumeMounts:
            - mountPath: /data
              name: minio-data
            - mountPath: /policies/buckets/system
              name: minio-policy
              readOnly: true
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /data/system;
              mkdir -p /data/.minio.sys/buckets/system;
              cp -r /policies/* /data/.minio.sys;
              minio server /data --console-address :9001;
      restartPolicy: Always
      volumes:
        - name: minio-policy
          configMap:
            name: minio-policy
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data
