kgtkr/mastodon/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
  selector:
    app.kubernetes.io/name: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  serviceName: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      containers:
        - image: redis:6-alpine
          name: redis
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
          volumeMounts:
            - mountPath: /data
              name: redis-data
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
          args:
            - --appendonly
            - "yes"
      restartPolicy: Always
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
