kgtkr/mastodon/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - port: 3000
  selector:
    app.kubernetes.io/name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
    spec:
      containers:
        - image: ghcr.io/kgtkr/mastodon
          name: web
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
          args:
            - bash
            - -c
            - "rm -f /mastodon/tmp/pids/server.pid; bundle exec rails s -p 3000"
          #livenessProbe:
          #  exec:
          #    command:
          #      - bash
          #      - -c
          #      - wget -q --spider --proxy=off localhost:3000/health || exit 1
      restartPolicy: Always
