kgtkr/mastodon/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mstdn.kgtkr.net
      secretName: ingress-cert
  rules:
    - host: mstdn.kgtkr.net
      http:
        paths:
          - path: /system
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
          - path: /api/v1/streaming
            pathType: Prefix
            backend:
              service:
                name: streaming
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
